--- a/app/globals.css
+++ b/app/globals.css
@@ -24,17 +24,26 @@ body {
   font-family: 'Raleway', Helvetica;
 }
 
-/* Custom scrollbar styling */
 ::-webkit-scrollbar {
-  width: 8px; /* Width of the vertical scrollbar */
+  width: 6px; 
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #193cb8; /* Color of the scrollbar thumb */
-  border-radius: 4px; /* Rounded edges for the thumb */
+  background-color: #193cb8; 
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent; /* No background for the scrollbar track */
+  background: transparent; 
+  margin: 20px;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
